@@ -20,7 +20,7 @@
 \
 \ ==============================================================================
 \ 
-\  $Date: 2008-11-23 06:48:53 $ $Revision: 1.12 $
+\  $Date: 2009-05-20 13:27:22 $ $Revision: 1.13 $
 \
 \ ==============================================================================
 \
@@ -205,11 +205,6 @@ s" MAX-U" environment? drop constant max-ms@   ( -- u = Maximum value of the mil
   ELSE
     drop
   THEN
-;
-
-
-: >,"              ( c-addr1 -- c-addr2 = Move to the next string, stored by ," )
-  count 1+ chars + aligned         \ Win32Forth stores a trailing 0 after the string ...
 ;
 
 
