@@ -20,7 +20,7 @@
 \
 \ ==============================================================================
 \ 
-\  $Date: 2008-05-19 05:44:00 $ $Revision: 1.18 $
+\  $Date: 2009-05-20 13:27:22 $ $Revision: 1.19 $
 \
 \ ==============================================================================
 \
@@ -186,10 +186,6 @@ s" MAX-U" environment? drop constant max-ms@   ( -- u = Maximum value of the mil
   THEN
 ;
 
-
-: >,"              ( c-addr1 -- c-addr2 = Move to the next string, stored by ," )
-  count chars + aligned
-;
 
 [DEFINED] float [IF]
 
